# Stack-Processor

./: CMakeLists.txt  Out.txt  README.md  Stack Processor.cpp  Stack Processor.h  StackProcessor.cpp  Tests.txt
RAR/data_structures/: dynamic_array.h
RAR/stack_processor/: stack_processor.cpp  stack_processor.h  tokens.h
data_structures/: dynamic_array.h  dynamic_stack.h
stack_processor/: stack_processor.cpp  stack_processor.h  tokens.h
